# Project-Multiprocessing-PF-B-_5

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/data/: jobs.db
backend/db/: connection.rs  jobs.rs
backend/src/: gs_compressor.rs  launcher.rs  main_api.rs  worker.rs
backend/src/db/: connection.rs  jobs.rs  mod.rs  worker_logs.rs
data/: jobs.db
frontend/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue
frontend/src/components/: FileTable.vue  FileUpload.vue  ProgressList.vue
frontend/src/services/: api.js
