[package]
name = "pdf_multiprocess_backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main_api"
path = "src/main_api.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart", "json"] }
tower-http = { version = "0.5", features = ["cors"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rayon = "1.10"
